--- a/MMQS_LaDisfida-main copia/pom.xml
+++ b/MMQS_LaDisfida-main copia/pom.xml
@@ -262,3 +262,8 @@
     </profile>
   </profiles>
 </project>
+
+<properties>
+  <sonar.organization>giovannizagaria</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
