--- a/carisma-tool-master/pom.xml
+++ b/carisma-tool-master/pom.xml
@@ -185,3 +185,8 @@
     </plugins>
   </build>
 </project>
+
+<properties>
+  <sonar.organization>giovannizagaria</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
