--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
     <module>report-aggregate-module</module>
   </modules>
   <properties>
+  <sonar.organization>giovannizagaria</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <tycho-version>4.0.4</tycho-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
